[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player/Player_controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.6
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.6
mid_height = 1.5
radial_segments = 16
rings = 4

[node name="Player" type="RigidBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Camera_yaw" type="Spatial" parent="."]

[node name="Camera_pitch" type="Spatial" parent="Camera_yaw"]

[node name="Camera" type="Camera" parent="Camera_yaw/Camera_pitch"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Ground_check" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )
